# bombardSimUppgift

./: .gitignore  Aircraft.cpp  Aircraft.h  CMakeLists.txt  Dropdownmenu.cpp  Dropdownmenu.h  FatMan.cpp  FatMan.h  Payload.cpp  Payload.h  SupplyDrop.cpp  SupplyDrop.h  c_cpp_properties.json  main.cpp  readme.md
